--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,6 @@
-push:
+ push:
     branches:
-      - main
+      - master
   pull_request:
       types: [opened, synchronize, reopened]
 name: Main Workflow
